@@ -22,8 +22,8 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
+import java.nio.charset.StandardCharsets;
 import java.util.Date;
 import java.util.ResourceBundle;
 import java.util.UUID;
@@ -45,6 +45,7 @@ import org.apache.cxf.common.util.Base64Utility;
 import org.apache.cxf.common.util.StringUtils;
 import org.apache.cxf.jaxrs.ext.MessageContext;
 import org.apache.cxf.jaxrs.utils.ExceptionUtils;
+import org.apache.cxf.jaxrs.utils.JAXRSUtils;
 import org.apache.cxf.rs.security.saml.DeflateEncoderDecoder;
 import org.apache.cxf.rs.security.saml.sso.state.RequestState;
 import org.apache.cxf.rs.security.saml.sso.state.ResponseState;
@@ -69,6 +70,9 @@ public abstract class AbstractRequestAssertionConsumerHandler extends AbstractSS
     private TokenReplayCache<String> replayCache;
 
     private MessageContext messageContext;
+    private String applicationURL;
+    private boolean parseApplicationURLFromRelayState;
+    private String assertionConsumerServiceAddress;
     
     @Context 
     public void setMessageContext(MessageContext mc) {
@@ -201,6 +205,31 @@ public abstract class AbstractRequestAssertionConsumerHandler extends AbstractSS
     }
     
     protected RequestState processRelayState(String relayState) {
+        if (isSupportUnsolicited()) {
+            String urlToForwardTo = applicationURL;
+            if (relayState != null && relayState.getBytes().length > 0 && relayState.getBytes().length < 80) {
+                // First see if we have a valid RequestState
+                RequestState requestState = getStateProvider().removeRequestState(relayState);
+                if (requestState != null && !isStateExpired(requestState.getCreatedAt(), 0)) {
+                    return requestState;
+                }
+                
+                // Otherwise get the application URL from the RelayState if supported
+                if (parseApplicationURLFromRelayState) {
+                    urlToForwardTo = relayState;
+                }
+            }
+            
+            // Otherwise create a new one for the IdP initiated case
+            return new RequestState(urlToForwardTo,
+                                    getIdpServiceAddress(),
+                                    null,
+                                    getIssuerId(JAXRSUtils.getCurrentMessage()),
+                                    "/",
+                                    null,
+                                    new Date().getTime());
+        }
+        
         if (relayState == null) {
             reportError("MISSING_RELAY_STATE");
             throw ExceptionUtils.toBadRequestException(null, null);
@@ -218,6 +247,7 @@ public abstract class AbstractRequestAssertionConsumerHandler extends AbstractSS
             reportError("EXPIRED_REQUEST_STATE");
             throw ExceptionUtils.toBadRequestException(null, null);
         }
+
         return requestState;
     }
     
@@ -235,7 +265,7 @@ public abstract class AbstractRequestAssertionConsumerHandler extends AbstractSS
         // URL Decoding only applies for the re-direct binding
         if (!postBinding) {
             try {
-                samlResponseDecoded = URLDecoder.decode(samlResponse, "UTF-8");
+                samlResponseDecoded = URLDecoder.decode(samlResponse, StandardCharsets.UTF_8);
             } catch (UnsupportedEncodingException e) {
                 throw ExceptionUtils.toBadRequestException(null, null);
             }
@@ -254,21 +284,19 @@ public abstract class AbstractRequestAssertionConsumerHandler extends AbstractSS
                 throw ExceptionUtils.toBadRequestException(ex, null);
             }
         } else {
-            try {
-                tokenStream = new ByteArrayInputStream(samlResponseDecoded.getBytes("UTF-8"));
-            } catch (UnsupportedEncodingException ex) {
-                throw ExceptionUtils.toBadRequestException(ex, null);
-            }
+            tokenStream = new ByteArrayInputStream(samlResponseDecoded.getBytes(StandardCharsets.UTF_8));
         }
         
         Document responseDoc = null;
         try {
-            responseDoc = StaxUtils.read(new InputStreamReader(tokenStream, "UTF-8"));
+            responseDoc = StaxUtils.read(new InputStreamReader(tokenStream, StandardCharsets.UTF_8));
         } catch (Exception ex) {
             throw new WebApplicationException(400);
         }
         
-        LOG.fine("Received response: " + DOM2Writer.nodeToString(responseDoc.getDocumentElement()));
+        if (LOG.isLoggable(Level.FINE)) {
+            LOG.fine("Received response: " + DOM2Writer.nodeToString(responseDoc.getDocumentElement()));
+        }
         
         XMLObject responseObject = null;
         try {
@@ -309,8 +337,11 @@ public abstract class AbstractRequestAssertionConsumerHandler extends AbstractSS
     ) {
         try {
             SAMLSSOResponseValidator ssoResponseValidator = new SAMLSSOResponseValidator();
-            ssoResponseValidator.setAssertionConsumerURL(
-                messageContext.getUriInfo().getAbsolutePath().toString());
+            String racsAddress = assertionConsumerServiceAddress;
+            if (racsAddress == null) {
+                racsAddress = messageContext.getUriInfo().getAbsolutePath().toString();
+            }
+            ssoResponseValidator.setAssertionConsumerURL(racsAddress);
 
             ssoResponseValidator.setClientAddress(
                  messageContext.getHttpServletRequest().getRemoteAddr());
@@ -321,7 +352,9 @@ public abstract class AbstractRequestAssertionConsumerHandler extends AbstractSS
             ssoResponseValidator.setEnforceAssertionsSigned(enforceAssertionsSigned);
             ssoResponseValidator.setEnforceResponseSigned(enforceResponseSigned);
             ssoResponseValidator.setEnforceKnownIssuer(enforceKnownIssuer);
-            ssoResponseValidator.setReplayCache(getReplayCache());
+            if (postBinding) {
+                ssoResponseValidator.setReplayCache(getReplayCache());
+            }
 
             return ssoResponseValidator.validateSamlResponse(samlResponse, postBinding);
         } catch (WSSecurityException ex) {
@@ -350,4 +383,37 @@ public abstract class AbstractRequestAssertionConsumerHandler extends AbstractSS
     public void setEnforceResponseSigned(boolean enforceResponseSigned) {
         this.enforceResponseSigned = enforceResponseSigned;
     }
+
+    public String getApplicationURL() {
+        return applicationURL;
+    }
+
+    /**
+     * Set the Application URL to forward to, for the unsolicited IdP case.
+     * @param applicationURL
+     */
+    public void setApplicationURL(String applicationURL) {
+        this.applicationURL = applicationURL;
+    }
+
+    public boolean isParseApplicationURLFromRelayState() {
+        return parseApplicationURLFromRelayState;
+    }
+
+    /**
+     * Whether to parse the application URL to forward to from the RelayState, for the unsolicted IdP case.
+     * @param parseApplicationURLFromRelayState
+     */
+    public void setParseApplicationURLFromRelayState(boolean parseApplicationURLFromRelayState) {
+        this.parseApplicationURLFromRelayState = parseApplicationURLFromRelayState;
+    }
+
+    public String getAssertionConsumerServiceAddress() {
+        return assertionConsumerServiceAddress;
+    }
+
+    public void setAssertionConsumerServiceAddress(String assertionConsumerServiceAddress) {
+        this.assertionConsumerServiceAddress = assertionConsumerServiceAddress;
+    }
+
 }
